<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--定义第一个标签页的内容-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/orange"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:background="@color/orange"
            android:layout_weight="1"
            android:id="@+id/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:layout_weight="3"
            android:id="@+id/title"
            android:gravity="center"
            android:textSize="12pt"
            android:textColor="@color/white"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/index"
            android:background="@color/orange"
            android:id="@+id/index"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/number"
                android:gravity="left|center_vertical"
                android:layout_weight="2"
                android:textSize="10pt"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numBtn"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:textSize="8pt"
                android:background="@drawable/bb"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit1"
            android:inputType="phone"
            android:textSize="8pt"
            android:textColor="@color/gray"
            android:layout_weight="2"
            android:background="@drawable/tb"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:id="@+id/numEdit"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="10pt"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit2"
            android:textColor="@color/gray"
            android:textSize="8pt"
            android:layout_weight="10"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:gravity="top"
            android:background="@drawable/tb"
            android:layout_marginTop="10dp"
            android:id="@+id/contentEdit"
            android:clickable="true"
            android:maxLength="300"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="right|center_vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="300"
                android:id="@+id/leftNum"
                android:textColor="@color/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text2"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ob"
            android:text="@string/handup"
            android:layout_weight="0.5"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="8pt"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>